src/antlr.parser/FSHParser.java
// Generated from FSH.g4 by ANTLR 4.8
package src.antlr.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FSHParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_ALIAS=1, KW_PROFILE=2, KW_EXTENSION=3, KW_INSTANCE=4, KW_INSTANCEOF=5, 
		KW_INVARIANT=6, KW_VALUESET=7, KW_CODESYSTEM=8, KW_RULESET=9, KW_MAPPING=10, 
		KW_MIXINS=11, KW_PARENT=12, KW_ID=13, KW_TITLE=14, KW_DESCRIPTION=15, 
		KW_EXPRESSION=16, KW_XPATH=17, KW_SEVERITY=18, KW_USAGE=19, KW_SOURCE=20, 
		KW_TARGET=21, KW_MOD=22, KW_MS=23, KW_SU=24, KW_TU=25, KW_NORMATIVE=26, 
		KW_DRAFT=27, KW_FROM=28, KW_EXAMPLE=29, KW_PREFERRED=30, KW_EXTENSIBLE=31, 
		KW_REQUIRED=32, KW_CONTAINS=33, KW_NAMED=34, KW_AND=35, KW_ONLY=36, KW_OR=37, 
		KW_OBEYS=38, KW_TRUE=39, KW_FALSE=40, KW_INCLUDE=41, KW_EXCLUDE=42, KW_CODES=43, 
		KW_WHERE=44, KW_VSREFERENCE=45, KW_SYSTEM=46, KW_UNITS=47, KW_EXACTLY=48, 
		KW_INSERT=49, EQUAL=50, STAR=51, COLON=52, COMMA=53, ARROW=54, STRING=55, 
		MULTILINE_STRING=56, NUMBER=57, UNIT=58, CODE=59, CONCEPT_STRING=60, DATETIME=61, 
		TIME=62, CARD=63, OR_REFERENCE=64, PIPE_REFERENCE=65, CANONICAL=66, CARET_SEQUENCE=67, 
		REGEX=68, COMMA_DELIMITED_CODES=69, PARAMETER_DEF_LIST=70, COMMA_DELIMITED_SEQUENCES=71, 
		BLOCK_COMMENT=72, SEQUENCE=73, WHITESPACE=74, LINE_COMMENT=75, PARAM_RULESET_REFERENCE=76, 
		RULESET_REFERENCE=77;
	public static final int
		RULE_doc = 0, RULE_entity = 1, RULE_alias = 2, RULE_profile = 3, RULE_extension = 4, 
		RULE_sdMetadata = 5, RULE_sdRule = 6, RULE_instance = 7, RULE_instanceMetadata = 8, 
		RULE_instanceRule = 9, RULE_invariant = 10, RULE_invariantMetadata = 11, 
		RULE_valueSet = 12, RULE_vsMetadata = 13, RULE_vsRule = 14, RULE_codeSystem = 15, 
		RULE_csMetadata = 16, RULE_csRule = 17, RULE_ruleSet = 18, RULE_ruleSetRule = 19, 
		RULE_paramRuleSet = 20, RULE_paramRuleSetContent = 21, RULE_mapping = 22, 
		RULE_mappingMetadata = 23, RULE_mappingEntityRule = 24, RULE_parent = 25, 
		RULE_id = 26, RULE_title = 27, RULE_description = 28, RULE_expression = 29, 
		RULE_xpath = 30, RULE_severity = 31, RULE_instanceOf = 32, RULE_usage = 33, 
		RULE_mixins = 34, RULE_source = 35, RULE_target = 36, RULE_cardRule = 37, 
		RULE_flagRule = 38, RULE_valueSetRule = 39, RULE_fixedValueRule = 40, 
		RULE_containsRule = 41, RULE_onlyRule = 42, RULE_obeysRule = 43, RULE_caretValueRule = 44, 
		RULE_mappingRule = 45, RULE_insertRule = 46, RULE_vsComponent = 47, RULE_vsConceptComponent = 48, 
		RULE_vsFilterComponent = 49, RULE_vsComponentFrom = 50, RULE_vsFromSystem = 51, 
		RULE_vsFromValueset = 52, RULE_vsFilterList = 53, RULE_vsFilterDefinition = 54, 
		RULE_vsFilterOperator = 55, RULE_vsFilterValue = 56, RULE_path = 57, RULE_paths = 58, 
		RULE_caretPath = 59, RULE_flag = 60, RULE_strength = 61, RULE_value = 62, 
		RULE_item = 63, RULE_code = 64, RULE_concept = 65, RULE_quantity = 66, 
		RULE_ratio = 67, RULE_reference = 68, RULE_canonical = 69, RULE_ratioPart = 70, 
		RULE_bool = 71, RULE_targetType = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"doc", "entity", "alias", "profile", "extension", "sdMetadata", "sdRule", 
			"instance", "instanceMetadata", "instanceRule", "invariant", "invariantMetadata", 
			"valueSet", "vsMetadata", "vsRule", "codeSystem", "csMetadata", "csRule", 
			"ruleSet", "ruleSetRule", "paramRuleSet", "paramRuleSetContent", "mapping", 
			"mappingMetadata", "mappingEntityRule", "parent", "id", "title", "description", 
			"expression", "xpath", "severity", "instanceOf", "usage", "mixins", "source", 
			"target", "cardRule", "flagRule", "valueSetRule", "fixedValueRule", "containsRule", 
			"onlyRule", "obeysRule", "caretValueRule", "mappingRule", "insertRule", 
			"vsComponent", "vsConceptComponent", "vsFilterComponent", "vsComponentFrom", 
			"vsFromSystem", "vsFromValueset", "vsFilterList", "vsFilterDefinition", 
			"vsFilterOperator", "vsFilterValue", "path", "paths", "caretPath", "flag", 
			"strength", "value", "item", "code", "concept", "quantity", "ratio", 
			"reference", "canonical", "ratioPart", "bool", "targetType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'?!'", "'MS'", 
			"'SU'", "'TU'", "'N'", "'D'", "'from'", null, null, null, null, "'contains'", 
			"'named'", "'and'", "'only'", "'or'", "'obeys'", "'true'", "'false'", 
			"'include'", "'exclude'", "'codes'", "'where'", "'valueset'", "'system'", 
			"'units'", null, "'insert'", "'='", null, "':'", "','", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_ALIAS", "KW_PROFILE", "KW_EXTENSION", "KW_INSTANCE", "KW_INSTANCEOF", 
			"KW_INVARIANT", "KW_VALUESET", "KW_CODESYSTEM", "KW_RULESET", "KW_MAPPING", 
			"KW_MIXINS", "KW_PARENT", "KW_ID", "KW_TITLE", "KW_DESCRIPTION", "KW_EXPRESSION", 
			"KW_XPATH", "KW_SEVERITY", "KW_USAGE", "KW_SOURCE", "KW_TARGET", "KW_MOD", 
			"KW_MS", "KW_SU", "KW_TU", "KW_NORMATIVE", "KW_DRAFT", "KW_FROM", "KW_EXAMPLE", 
			"KW_PREFERRED", "KW_EXTENSIBLE", "KW_REQUIRED", "KW_CONTAINS", "KW_NAMED", 
			"KW_AND", "KW_ONLY", "KW_OR", "KW_OBEYS", "KW_TRUE", "KW_FALSE", "KW_INCLUDE", 
			"KW_EXCLUDE", "KW_CODES", "KW_WHERE", "KW_VSREFERENCE", "KW_SYSTEM", 
			"KW_UNITS", "KW_EXACTLY", "KW_INSERT", "EQUAL", "STAR", "COLON", "COMMA", 
			"ARROW", "STRING", "MULTILINE_STRING", "NUMBER", "UNIT", "CODE", "CONCEPT_STRING", 
			"DATETIME", "TIME", "CARD", "OR_REFERENCE", "PIPE_REFERENCE", "CANONICAL", 
			"CARET_SEQUENCE", "REGEX", "COMMA_DELIMITED_CODES", "PARAMETER_DEF_LIST", 
			"COMMA_DELIMITED_SEQUENCES", "BLOCK_COMMENT", "SEQUENCE", "WHITESPACE", 
			"LINE_COMMENT", "PARAM_RULESET_REFERENCE", "RULESET_REFERENCE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FSH.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FSHParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FSHParser.EOF, 0); }
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public DocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterDoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitDoc(this);
		}
	}

	public final DocContext doc() throws RecognitionException {
		DocContext _localctx = new DocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_ALIAS) | (1L << KW_PROFILE) | (1L << KW_EXTENSION) | (1L << KW_INSTANCE) | (1L << KW_INVARIANT) | (1L << KW_VALUESET) | (1L << KW_CODESYSTEM) | (1L << KW_RULESET) | (1L << KW_MAPPING))) != 0)) {
				{
				{
				setState(146);
				entity();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public ProfileContext profile() {
			return getRuleContext(ProfileContext.class,0);
		}
		public ExtensionContext extension() {
			return getRuleContext(ExtensionContext.class,0);
		}
		public InvariantContext invariant() {
			return getRuleContext(InvariantContext.class,0);
		}
		public InstanceContext instance() {
			return getRuleContext(InstanceContext.class,0);
		}
		public ValueSetContext valueSet() {
			return getRuleContext(ValueSetContext.class,0);
		}
		public CodeSystemContext codeSystem() {
			return getRuleContext(CodeSystemContext.class,0);
		}
		public RuleSetContext ruleSet() {
			return getRuleContext(RuleSetContext.class,0);
		}
		public ParamRuleSetContext paramRuleSet() {
			return getRuleContext(ParamRuleSetContext.class,0);
		}
		public MappingContext mapping() {
			return getRuleContext(MappingContext.class,0);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterEntity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitEntity(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entity);
		try {
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				alias();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				profile();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				extension();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(157);
				invariant();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				instance();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(159);
				valueSet();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(160);
				codeSystem();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(161);
				ruleSet();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(162);
				paramRuleSet();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(163);
				mapping();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasContext extends ParserRuleContext {
		public TerminalNode KW_ALIAS() { return getToken(FSHParser.KW_ALIAS, 0); }
		public List<TerminalNode> SEQUENCE() { return getTokens(FSHParser.SEQUENCE); }
		public TerminalNode SEQUENCE(int i) {
			return getToken(FSHParser.SEQUENCE, i);
		}
		public TerminalNode EQUAL() { return getToken(FSHParser.EQUAL, 0); }
		public AliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitAlias(this);
		}
	}

	public final AliasContext alias() throws RecognitionException {
		AliasContext _localctx = new AliasContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(KW_ALIAS);
			setState(167);
			match(SEQUENCE);
			setState(168);
			match(EQUAL);
			setState(169);
			match(SEQUENCE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProfileContext extends ParserRuleContext {
		public TerminalNode KW_PROFILE() { return getToken(FSHParser.KW_PROFILE, 0); }
		public TerminalNode SEQUENCE() { return getToken(FSHParser.SEQUENCE, 0); }
		public List<SdMetadataContext> sdMetadata() {
			return getRuleContexts(SdMetadataContext.class);
		}
		public SdMetadataContext sdMetadata(int i) {
			return getRuleContext(SdMetadataContext.class,i);
		}
		public List<SdRuleContext> sdRule() {
			return getRuleContexts(SdRuleContext.class);
		}
		public SdRuleContext sdRule(int i) {
			return getRuleContext(SdRuleContext.class,i);
		}
		public ProfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_profile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterProfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitProfile(this);
		}
	}

	public final ProfileContext profile() throws RecognitionException {
		ProfileContext _localctx = new ProfileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_profile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(KW_PROFILE);
			setState(172);
			match(SEQUENCE);
			setState(174); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(173);
				sdMetadata();
				}
				}
				setState(176); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_MIXINS) | (1L << KW_PARENT) | (1L << KW_ID) | (1L << KW_TITLE) | (1L << KW_DESCRIPTION))) != 0) );
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR) {
				{
				{
				setState(178);
				sdRule();
				}
				}
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtensionContext extends ParserRuleContext {
		public TerminalNode KW_EXTENSION() { return getToken(FSHParser.KW_EXTENSION, 0); }
		public TerminalNode SEQUENCE() { return getToken(FSHParser.SEQUENCE, 0); }
		public List<SdMetadataContext> sdMetadata() {
			return getRuleContexts(SdMetadataContext.class);
		}
		public SdMetadataContext sdMetadata(int i) {
			return getRuleContext(SdMetadataContext.class,i);
		}
		public List<SdRuleContext> sdRule() {
			return getRuleContexts(SdRuleContext.class);
		}
		public SdRuleContext sdRule(int i) {
			return getRuleContext(SdRuleContext.class,i);
		}
		public ExtensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterExtension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitExtension(this);
		}
	}

	public final ExtensionContext extension() throws RecognitionException {
		ExtensionContext _localctx = new ExtensionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_extension);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(KW_EXTENSION);
			setState(185);
			match(SEQUENCE);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_MIXINS) | (1L << KW_PARENT) | (1L << KW_ID) | (1L << KW_TITLE) | (1L << KW_DESCRIPTION))) != 0)) {
				{
				{
				setState(186);
				sdMetadata();
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR) {
				{
				{
				setState(192);
				sdRule();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SdMetadataContext extends ParserRuleContext {
		public ParentContext parent() {
			return getRuleContext(ParentContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public MixinsContext mixins() {
			return getRuleContext(MixinsContext.class,0);
		}
		public SdMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sdMetadata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterSdMetadata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitSdMetadata(this);
		}
	}

	public final SdMetadataContext sdMetadata() throws RecognitionException {
		SdMetadataContext _localctx = new SdMetadataContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sdMetadata);
		try {
			setState(203);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_PARENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(198);
				parent();
				}
				break;
			case KW_ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(199);
				id();
				}
				break;
			case KW_TITLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(200);
				title();
				}
				break;
			case KW_DESCRIPTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(201);
				description();
				}
				break;
			case KW_MIXINS:
				enterOuterAlt(_localctx, 5);
				{
				setState(202);
				mixins();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SdRuleContext extends ParserRuleContext {
		public CardRuleContext cardRule() {
			return getRuleContext(CardRuleContext.class,0);
		}
		public FlagRuleContext flagRule() {
			return getRuleContext(FlagRuleContext.class,0);
		}
		public ValueSetRuleContext valueSetRule() {
			return getRuleContext(ValueSetRuleContext.class,0);
		}
		public FixedValueRuleContext fixedValueRule() {
			return getRuleContext(FixedValueRuleContext.class,0);
		}
		public ContainsRuleContext containsRule() {
			return getRuleContext(ContainsRuleContext.class,0);
		}
		public OnlyRuleContext onlyRule() {
			return getRuleContext(OnlyRuleContext.class,0);
		}
		public ObeysRuleContext obeysRule() {
			return getRuleContext(ObeysRuleContext.class,0);
		}
		public CaretValueRuleContext caretValueRule() {
			return getRuleContext(CaretValueRuleContext.class,0);
		}
		public InsertRuleContext insertRule() {
			return getRuleContext(InsertRuleContext.class,0);
		}
		public SdRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sdRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterSdRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitSdRule(this);
		}
	}

	public final SdRuleContext sdRule() throws RecognitionException {
		SdRuleContext _localctx = new SdRuleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sdRule);
		try {
			setState(214);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(205);
				cardRule();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(206);
				flagRule();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(207);
				valueSetRule();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(208);
				fixedValueRule();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(209);
				containsRule();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(210);
				onlyRule();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(211);
				obeysRule();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(212);
				caretValueRule();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(213);
				insertRule();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceContext extends ParserRuleContext {
		public TerminalNode KW_INSTANCE() { return getToken(FSHParser.KW_INSTANCE, 0); }
		public TerminalNode SEQUENCE() { return getToken(FSHParser.SEQUENCE, 0); }
		public List<InstanceMetadataContext> instanceMetadata() {
			return getRuleContexts(InstanceMetadataContext.class);
		}
		public InstanceMetadataContext instanceMetadata(int i) {
			return getRuleContext(InstanceMetadataContext.class,i);
		}
		public List<InstanceRuleContext> instanceRule() {
			return getRuleContexts(InstanceRuleContext.class);
		}
		public InstanceRuleContext instanceRule(int i) {
			return getRuleContext(InstanceRuleContext.class,i);
		}
		public InstanceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instance; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).enterInstance(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FSHListener ) ((FSHListener)listener).exitInstance(this);
		}
	}

	public final InstanceContext instance() throws RecognitionException {
		InstanceContext _localctx = new InstanceContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instance);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			match(KW_INSTANCE);
			setState(217);
			match(SEQUENCE);
			setState(221);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_INSTANCEOF) | (1L << KW_MIXINS) | (1L << KW_TITLE) | (1L << KW_DESCRIPTION) | (1L << KW_USAGE))) != 0)) {
				{
				{
				setState(218);
				instanceMetadata();
				}
				}
				setState(223);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(227);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR) {
				{
				{
				setState(224);
				instanceRule();
				}
				}
				setState(229);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
